--- a/templates/competition.html
+++ b/templates/competition.html
@@ -32,7 +32,7 @@
                         <div class="actions-row">
                             <div id="raceStatus">
                                 <i class="fas fa-info-circle"></i>
-                                <span>Select all cycles to start the race</span>
+                                <span>Select cycles to start the race</span>
                             </div>
                             
                             <div class="action-buttons">
