--- a/templates/competition.html
+++ b/templates/competition.html
@@ -71,15 +71,16 @@
 
     <!-- User Registration Popup -->
     <div class="popup" id="registerPopup">
-        <div class="popup-content">
-            <button class="close-btn" id="closePopup">&times;</button>
-            <h3>Register New User</h3>
-            <div class="form-group">
-                <input type="text" id="userName" class="form-control" placeholder="Enter user name" required>
-            </div>
-            <button class="btn" id="saveUser">Save User</button>
+    <div class="popup-content">
+        <span class="close-btn">&times;</span>
+        <h3>Register New User</h3>
+        <div class="form-group">
+        <input type="text" id="userName" placeholder="Enter your name" class="form-input" required />
         </div>
+        <button id="saveUser" class="save-btn">Save User</button>
     </div>
+    </div>
+
 
     <script src="/static/js/competition.js"></script>
 </body>
